--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,12 +1,15 @@
 <h3>Home</h3>
 <h1> Yo fill out this form</h1>
-<form action = "/submitdatshit" method="post">
+<h1>blahsdlasbfsafhaoasfas
+  sfhsafasufsaf
+  THIS IS FILLER YOYOYO </h1>
+<form id="butterbar" action = "/submitdatshit" method="post">
   First name:<br>
-  <input type="text" value="{{firstname}}" name="firstname"><br>
+  <input type="text" id="firstname" value="{{firstname}}" name="firstname"><br>
   Last name:<br>
-  <input type="text" value = "{{lastname}}" name="lastname"><br>
+  <input type="text" id="lastname" value = "{{lastname}}" name="lastname"><br>
   Menu Item of da day:<br>
-  <input type="text" value="{{menuitem}}"name="menu"><br>
+  <input type="text" id="menuitem" value="{{menuitem}}"name="menu"><br>
   <button class="btn">CLICK 2 dodat stuff</button>
 </form>
 <br />
