--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,11 +6,16 @@ body {
 
 #butterbar
 {
-    height: 500px;
-    width:500px;
+    z-index: -1,auto;
+    position:fixed;
+    height: 1000px;
+    width:1000px;
     border: 2px solid #f0c36d;
     background-color: #f9edbe;
-    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /*
     top: 30px;
     left: 500px;
     line-height: 200%;
@@ -18,6 +23,6 @@ body {
     padding-left: 5px;
     padding-right: 5px;
     border-radius: 5px;
-    display: none;
+    display: none;*/
 
 }
