[added] lots of views and routes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,15 +1,115 @@
 body {
   min-height: 75rem;
   padding-top: 6.5rem;
-  font: 14px "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 3px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 2em;
+  background-color: #CBB4BA;
+  color: white;
+}
+#customeridtxt{
+  text-transform: lowercase;
+  text-decoration: none;
+}
+.code{
+  border-style: solid;
+    border-width: 5px;
+    background-color: white;
+    color:black;
+}
+.placeholders{
+  color:black;
+  font-family: 'Raleway', sans-serif;
+
+}
+.title{
+  font-size: 30px;
+}
+.btn{
+  height:50px;
+  width:200px;
+}
+.modalDialog {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: rgba(0,0,0,0.8);
+	z-index: -1,auto;
+	opacity:0;
+	-webkit-transition: opacity 400ms ease-in;
+	-moz-transition: opacity 400ms ease-in;
+	transition: opacity 400ms ease-in;
+	pointer-events: none;
+}
+.modalDialog:target {
+	opacity:1;
+	pointer-events: auto;
+}
+.clickspecial{
+  font-size: 50px;
+  padding:40px;
+  padding-bottom:300px;
+  padding-left:400px;
+}
+.modalDialog > div {
+	width: 400px;
+	position: relative;
+	margin: 10% auto;
+	padding: 5px 20px 13px 20px;
+	border-radius: 10px;
+	background: #fff;
+	background: -moz-linear-gradient(#fff, #999);
+	background: -webkit-linear-gradient(#fff, #999);
+	background: -o-linear-gradient(#fff, #999);
 }
 
+.close {
+	background: #606061;
+	color: #FFFFFF;
+	line-height: 25px;
+	position: absolute;
+	right: -12px;
+	text-align: center;
+	top: -10px;
+	width: 24px;
+	text-decoration: none;
+	font-weight: bold;
+	-webkit-border-radius: 12px;
+	-moz-border-radius: 12px;
+	border-radius: 12px;
+	-moz-box-shadow: 1px 1px 3px #000;
+	-webkit-box-shadow: 1px 1px 3px #000;
+	box-shadow: 1px 1px 3px #000;
+}
+.modal{
+  font-size: 300px;
+}
+.close:hover { background: #00d9ff; }
+#displaybar{
+  z-index: -1,auto;
+  position:fixed;
+  height: 1000px;
+  width:1000px;
+  border: 2px solid #f0c36d;
+  background-color: pink;
+
+}
+#razzle{
+  color: pink
+}
 #butterbar
 {
     z-index: -1,auto;
-    position:fixed;
-    height: 1000px;
-    width:1000px;
+    position:relative;
+    height: 500px;
+    width:500px;
     border: 2px solid #f0c36d;
     background-color: #f9edbe;
     top: 50%;
