--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,15 +1,13 @@
 <h3>Home</h3>
-<h1> Yo fill out this form</h1>
-<h1>blahsdlasbfsafhaoasfas
-  sfhsafasufsaf
-  THIS IS FILLER YOYOYO </h1>
-<form id="butterbar" action = "/submitdatshit" method="post">
-  First name:<br>
-  <input type="text" id="firstname" value="{{firstname}}" name="firstname"><br>
-  Last name:<br>
-  <input type="text" id="lastname" value = "{{lastname}}" name="lastname"><br>
-  Menu Item of da day:<br>
-  <input type="text" id="menuitem" value="{{menuitem}}"name="menu"><br>
+<h1 class="title"> Yo fill out this form to sign up for a cool experience</h1>
+<form action = "/signup" method="post">
+  username:<br>
+  <input class="placeholders" type="text" value="{{username}}" name="username"><br>
+  Password:<br>
+  <input class="placeholders" type="text" value = "{{password}}" name="password"><br>
+  Restaurant name:<br>
+  <input class="placeholders" type="text" value="{{restaurant}}"name="restaurant"><br>
   <button class="btn">CLICK 2 dodat stuff</button>
+  <button class="btn"href="/login"> click to login instead</button>
 </form>
 <br />
