--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,12 +7,31 @@
 
   <!-- Latest compiled and minified CSS -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,600|Titillium+Web:400,600' rel='stylesheet' type='text/css'>
-
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <!-- Your stylesheet -->
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <script src="/js/test.js"></script>
+
+
+  <!-- <script client-id="58fa4eb08f402d07891474c6">
+
+  var s=document.createElement('script');
+  s.setAttribute('src','https://code.jquery.com/jquery.js');
+  var t=document.createElement('script');
+  t.setAttribute('src', "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js");
+  document.getElementsByTagName('head')[0].appendChild(t); -->
+  <!-- //
+  // window.portInterval = window.setTimeout(function(){
+  //   $.get("/html/test1.html", function(html){
+  //     $("body").append(html);
+  //   });
+  // }, 500); -->
+  <!-- </script> -->
+
+
+
 </head>
 <body>
 
