--- a/views/ownerview.hbs
+++ b/views/ownerview.hbs
@@ -8,7 +8,7 @@
 
 <h2> dis is what you do:</h2>
 <h2> include this snippet in your home page file, replace INSERT YOUR ID with your id given above</h2>
-<xmp class="code">
+<xmp class="code" id="customeridtxt">
 
   <script client-id="INSERT YOUR ID">
 
@@ -32,6 +32,8 @@
   <input class="placeholders" type="text" value="{{menuitem}}" name="menuitem"><br>
   color :<br>
   <input class="placeholders" type="text" value = "{{color}}" name="color"><br>
+  price :<br>
+  <input class="placeholders" type="text" value = "{{price}}" name="price"><br>
 
   <button class="btn">CLICK 4 SUM MAGIC</button>
 </form>
