updated widget html

--- a/views/ownerview.hbs
+++ b/views/ownerview.hbs
@@ -44,6 +44,8 @@
 
 <form action = "/changeModal" method="post">
   <div>
+    Type of widget:<br>
+    <input class="placeholders" type="text" value="{{type}}" name="type"><br>
     Special of the day:<br>
     <input class="placeholders" type="text" value="{{menuitem}}" name="menuitem"><br>
     For how much tho :<br>
