--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,10 +12,28 @@ body {
   background-color: #CBB4BA;
   color: white;
 }
+#preview{
+  text-transform: none;
+  border-style: solid;
+  border-width: 5px;
+  background-color: white;
+  color:black;
+  min-width: 400px;
+  min-height: 400px;
+
+}
+#organizeOwner{
+  display:flex;
+  justify-content: space-around;
+  padding:30px;
+
+
+}
+
 .forms{
   margin-left:80px;
   max-width: 400px;
-  padding: 20px 12px 10px 20px;
+  /*padding: 20px 12px 10px 20px;*/
 
 }
 .forms li{
@@ -28,9 +46,7 @@ body {
   text-transform: lowercase;
   text-decoration: none;
 }
-#organize{
-  margin:25px 0;
-}
+
 .txt-img{
   background-image: url('./example.png')
 
@@ -65,8 +81,11 @@ body {
 .placeholders{
   color:black;
   font-family: 'Raleway', sans-serif;
+  width: 200px;
 
 }
+label,input {width:250px; height: 20px; display:inline-block;}
+
 .title{
   font-size: 30px;
 }
