--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,7 +19,7 @@ body {
   background-color: white;
   color:black;
   min-width: 400px;
-  min-height: 400px;
+  min-height: 500px;
 
 }
 #banner {
@@ -35,8 +35,8 @@ body {
 }
 
 .forms{
-  margin-left:80px;
-  max-width: 400px;
+  margin-left:10px;
+  min-width: 600px;
   /*padding: 20px 12px 10px 20px;*/
 
 }
@@ -95,14 +95,14 @@ body {
   width: 200px;
 
 }
-label,input {width:250px; height: 20px; display:inline-block;}
+input{width:200px}
+label,input {width:350px; height: 20px; display:inline-block;}
 
 .title{
   font-size: 30px;
 }
 .btn{
-  /*height:50px;
-  width:200px;*/
-
+  height:50px;
+  width:200px;
   display:inline-block;
 }
