--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -362,3 +362,18 @@ iframe {
   height: 400px;
   border: 2px solid #fff;
 }
+
+#circle {
+	width: 100px;
+	height: 100px;
+	background: red;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+}
+
+#square {
+	width: 100px;
+	height: 100px;
+	background: red;
+}
