--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 <h3>Home</h3>
-<h1 class="title"> Yo fill out this form to sign up for a cool experience</h1>
+<h1> Yo fill out this form to sign up for a cool experience</h1>
 <form action = "/signup" method="post">
   username:<br>
   <input class="placeholders" type="text" value="{{username}}" name="username"><br>
